# webserv

./: CMakeLists.txt  CMakeLists.txt.in  Makefile  README.md  SECURITY.md  configFileExemple  netcat.txt  route exemple  todo.txt  urls.txt
configs/: sampleconf
error/: general.html
includes/: BodyChunk.hpp  CGIHandler.hpp  Client.hpp  Controller.hpp  CppSplit.hpp  EpollUtils.hpp  ExtractChunk.hpp  HandleRequest.hpp  HandleRequest.scaryPast  HttpCodes.hpp  HttpRequest.hpp  HttpRequest.scaryPast  HttpResponse.hpp  HttpResponse.scaryPast  InvalidConfigFileException.hpp  IsBlank.hpp  MultipartFormDataBody.hpp  Parsing.hpp  RequestBody.hpp  RequestException.hpp  RequestHandler.hpp  RequestState.hpp  Route.hpp  RouteConfig.hpp  Server.hpp  ServerConfig.hpp  Socket.hpp  SpacesClean.hpp  StrictUtoi.hpp  VecBuffCmp.hpp  Webserv.hpp  WebservController.hpp  http_methods.h  test.hpp
src/: BodyChunk.cpp  Client.cpp  Controller.cpp  ExtractChunk.cpp  HttpRequest.cpp  HttpResponse.cpp  Socket.cpp  Webserv.cpp  main.cpp  webserv.cpp
src/controller/: WebservController.cpp
src/model/: CGIHandler.cpp  Client.cpp  HandleRequest.cpp  HttpRequest.cpp  HttpResponse.cpp  HttpResponse.scaryPast  MultipartFormDataBody.cpp  RequestBody.cpp  RequestHandler.cpp  Route.cpp  RouteConfig.cpp  Server.cpp  ServerConfig.cpp  Socket.cpp  Webserv.cpp
src/run/: main.cpp  requestTest.cpp
src/util/: CppSplit.cpp  EpollUtils.cpp  ExtractChunk.cpp  IsBlank.cpp  Parsing.cpp  SpacesClean.cpp  StrictUtoi.cpp  VecBuffCmp.cpp
svesa/: general.html
test/: test.cpp
test/model/: RouteConfigTest.cpp  ServerConfigTest.cpp
test/util/: ParsingTest.cpp
test/util/CppSplitTest/: CppSplitTest.cpp
test/util/IsBlankTest/: IsBlankTest.cpp
test/util/ParsingTest/: ExtractBlockTest.cpp  ExtractBracketLayerTest.cpp  ExtractQuoteContentTest.cpp  ExtractVariableBlockTest.cpp  ExtractVariableTest.cpp  ExtractWordTest.cpp  FindInCurrentBlockTest.cpp  IsSpecialCharTest.cpp  findInCurrentBlockTest.cpp
test/util/SpacesCleanTest/: CleanLeadingSpacesTest.cpp  CleanSpacesTest.cpp  CleanTraillingSpacesTest.cpp
www/: cgitest.html  index.html  test.html
www/cgi-bin/: envs.cgi  file.cgi  hello.py  infinite.py  test.py
www/error/: general.html
www/posting/: index.html
www/posting/upload/: output.txt
www/saku/: index.html
www/testing/: index.html
